--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ user_config.json
 firebase-key.json
 config.yaml
 
-
 database.db
 dwell.db
 
@@ -23,4 +22,5 @@ auth/providers/streamlit_auth_provider.py
 auth/providers/dwell_descriptions.json
 
 user_profile.txt
+user_values.txt
 
